Adding a maven coverage Profile in order for better Sonar reporting of the Test Cases
This fix is based on an awesome workaround suggested by
http://www.aheritier.net/maven-failsafe-sonar-and-jacoco-are-in-a-boat/

The fix is rendered in such a way that is harmless to the execution of any part of the code.
When we need code-coverage we can execute this profile to gather required info in Sonar.

Change-Id: I4ac7d8a255a9ac1fa8115bb48e9e80a05614b5e8
Signed-off-by: Madhu Venugopal <mavenugo@gmail.com>